syntax = "proto3";

package restaurant;

option go_package = "./pb";

service RestaurantService {
  rpc GetRestaurants(GetRestaurantsRequest) returns (GetRestaurantsResponse);
  rpc GetRestaurant(GetRestaurantRequest) returns (GetRestaurantResponse);

  rpc GetMenu(GetMenuRequest) returns (GetMenuResponse);
  rpc GetMenuItem(GetMenuItemRequest) returns (GetMenuItemResponse);

  rpc GetRestaurantStatus(GetRestaurantStatusRequest) returns (GetRestaurantStatusResponse);
  rpc ValidateMenuItems(ValidateMenuItemsRequest) returns (ValidateMenuItemsResponse);
}

// Messages
message Restaurant {
    string id = 1;
    string name = 2;
    string description = 3;
    string address = 4;
    string phone = 5;
    double latitude = 6;
    double longitude = 7;
    string logo_url = 8;
    string opening_time = 9;
    string closing_time = 10;
    string created_at = 11;
    string updated_at = 12;
}

message MenuItem {
    string id = 1;
    string restaurant_id = 2;
    string name = 3;
    string description = 4;
    double price = 5;
    string image_url = 6;
    bool is_available = 7;
    string category = 8;
    string created_at = 9;
    string updated_at = 10;
}

message GetRestaurantsRequest {
    int32 page = 1;
}

message GetRestaurantsResponse {
    repeated Restaurant restaurants = 1;
    int32 total = 2;
}

message GetRestaurantRequest {
    string id = 1;
}

message GetRestaurantResponse {
    Restaurant restaurant = 1;
}

message GetMenuRequest {
    string restaurant_id = 1;
    int32 page = 2;
}

message GetMenuResponse {
    repeated MenuItem items = 1;
    int32 total = 2;
}

message GetMenuItemRequest {
    string id = 1;
}

message GetMenuItemResponse {
    MenuItem item = 1;
}

// GetRestaurantStatus - Check if restaurant is open and accepting orders
message GetRestaurantStatusRequest {
    string restaurant_id = 1;
}

message GetRestaurantStatusResponse {
    bool is_accepting_orders = 2;
    string opening_time = 3;
    string closing_time = 4;
}

// ValidateMenuItems - Validate multiple items are available (for order validation)
message ValidateMenuItemsRequest {
    string restaurant_id = 1;
    repeated string item_ids = 2;
}

message MenuItemValidation {
    string item_id = 1;
    bool is_available = 2;
    string name = 3;
}

message ValidateMenuItemsResponse {
    bool all_available = 1;
    repeated MenuItemValidation items = 2;
    repeated string unavailable_items = 3;
}
